Set up gruntfile for local, stage, and prod deploy

--- a/students.html
+++ b/students.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Nate Walton: Student Work</title>
-    <meta name="description" content="Description about your department."/>
-    <meta name="author" content="Your Department Name"/>
-    <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
+    <meta name="description" content="Nathan Walton's graphic design web site"/>
+    <meta name="keywords" content="design, responsive, web, web design, typography, portfolio, education, design education"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.6"/>
+    <link rel="stylesheet" href="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.6"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
-      window.localAssets = false;
-      window.jsVersion   = 2;
+      window.jsVersion   = 2.1;
+      window.assets      = "http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/";
     </script>
-    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2"></script>
+    <script src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2.1"></script>
   </head>
   <body class="teaching">
     <header class="main">
@@ -70,7 +69,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -90,7 +89,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -110,7 +109,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -130,7 +129,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -150,7 +149,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -170,7 +169,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster7.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -190,7 +189,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -210,7 +209,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster8.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -230,7 +229,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/poster9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/poster9.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/poster9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -266,7 +265,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -286,7 +285,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -306,7 +305,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -326,7 +325,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -346,7 +345,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -366,7 +365,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -386,7 +385,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd7" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd7.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd7.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -406,7 +405,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd8" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd8.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd8.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -426,7 +425,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/cd9" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/cd9.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/cd9.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -462,7 +461,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/album1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -482,7 +481,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/album2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -502,7 +501,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/album3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -522,7 +521,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/album4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -542,7 +541,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album5" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album5.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/album5.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -562,7 +561,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/album6" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/album6.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/album6.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -598,7 +597,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop1.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -618,7 +617,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop2.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -638,7 +637,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop4" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop4.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop4.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -658,7 +657,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="student/photoshop3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://nkwalton.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop3.jpg"/></noscript>
+              <noscript><img alt="" src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/img/400w/student/photoshop3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
