--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Nate Walton</title>
-    <meta name="description" content="Description about your department."/>
-    <meta name="author" content="Your Department Name"/>
-    <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
+    <meta name="description" content="Nathan Walton's graphic design web site"/>
+    <meta name="keywords" content="design, responsive, web, web design, typography, portfolio, education, design education"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://nkwalton.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.6"/>
+    <link rel="stylesheet" href="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.6"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
-      window.localAssets = false;
-      window.jsVersion   = 2;
+      window.jsVersion   = 2.1;
+      window.assets      = "http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/";
     </script>
-    <script src="http://nkwalton.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2"></script>
+    <script src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2.1"></script>
   </head>
   <body class="home">
     <header class="main">
