Update system for local, stage, and production deployment

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <meta name="keywords" content="design, responsive, web, web design, typography, portfolio, education, design education"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/css/style.css?v=3.6"/>
+    <link rel="stylesheet" href="css/style.css?v=3.9"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
       window.jsVersion   = 2.1;
-      window.assets      = "http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/";
+      window.assets      = "";
     </script>
-    <script src="http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/js/init.min.js?v=2.1"></script>
+    <script src="js/init.min.js?v=2.1"></script>
   </head>
   <body class="home">
     <header class="main">
       <h1><a href="/">Nate Walton</a></h1>
-      <nav><a href="/" class="home">Home</a><a href="/portfolio" class="work">Work</a><a href="/students" class="teaching">Teaching</a>
+      <nav><a href="/" class="home">Home</a><a href="/portfolio.html" class="work">Work</a><a href="/students.html" class="teaching">Teaching</a>
         <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
@@ -32,9 +32,9 @@
       <div class="byline">Edward Tufte</div>
     </div>
     <div class="content">
-      <div class="wrapper"><a href="/portfolio" class="heading">Portfolio</a><a href="/portfolio#gifts" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#byu" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span><img data-src="byu-home.jpg" alt="" class="lazy front"/></a><a href="/portfolio#thesis" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Connections</span></span><img data-src="thesis_cards.jpg" alt="" class="lazy front"/></a><a href="/portfolio" class="viewall next"><span class="link visuallyhidden">View all</span></a>
+      <div class="wrapper"><a href="/portfolio.html" class="heading">Portfolio</a><a href="/portfolio.html#gifts" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Sacred Gifts</span></span><img data-src="sg_home.jpg" alt="" class="lazy front"/></a><a href="/portfolio.html#byu" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">BYU Web</span></span><img data-src="byu-home.jpg" alt="" class="lazy front"/></a><a href="/portfolio.html#thesis" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Connections</span></span><img data-src="thesis_cards.jpg" alt="" class="lazy front"/></a><a href="/portfolio.html" class="viewall next"><span class="link visuallyhidden">View all</span></a>
       </div>
-      <div class="wrapper"><a href="/students" class="heading">Student Work</a><a href="/students#poster" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Poster</span></span><img data-src="student/poster1.jpg" alt="" class="lazy front"/></a><a href="/students#album" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">Album</span></span><img data-src="student/album1.jpg" alt="" class="lazy front"/></a><a href="/students#photoshop" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3.jpg" alt="" class="lazy front"/></a><a href="/students" class="viewall next"><span class="link visuallyhidden">View all</span></a>
+      <div class="wrapper"><a href="/students.html" class="heading">Student Work</a><a href="/students.html#poster" class="preview toLoad image-0"><span class="projectDesc"><span class="projectTitle">Poster</span></span><img data-src="student/poster1.jpg" alt="" class="lazy front"/></a><a href="/students.html#album" class="preview toLoad image-1"><span class="projectDesc"><span class="projectTitle">Album</span></span><img data-src="student/album1.jpg" alt="" class="lazy front"/></a><a href="/students.html#photoshop" class="preview toLoad image-2"><span class="projectDesc"><span class="projectTitle">Photoshop</span></span><img data-src="student/photoshop3.jpg" alt="" class="lazy front"/></a><a href="/students.html" class="viewall next"><span class="link visuallyhidden">View all</span></a>
       </div>
     </div>
     <footer class="main"></footer>
