Update portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,15 +43,15 @@
               <div class="projectlinks"><a href="#byutickets" class="projectLink"><span class="projectDesc">
                     <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Tickets</span></span><img data-src="byutickets_full" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#byutickets" class="sublink"></a><a href="#byutickets-1" class="sublink"></a></span></div>
               <div class="projectlinks"><a href="#ls" class="projectLink"><span class="projectDesc">
-                    <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Learning Suite</span></span><img data-src="ls-scores" data-ext=".png" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#ls" class="sublink"></a><a href="#ls-1" class="sublink"></a><a href="#ls-2" class="sublink"></a></span></div>
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Learning Suite</span></span><img data-src="ls-scores" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#ls" class="sublink"></a><a href="#ls-1" class="sublink"></a><a href="#ls-2" class="sublink"></a></span></div>
               <div class="projectlinks"><a href="#thesis" class="projectLink"><span class="projectDesc">
-                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Connections</span></span><img data-src="thesis_cards" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#thesis" class="sublink"></a><a href="#thesis-1" class="sublink"></a><a href="#thesis-2" class="sublink"></a><a href="#thesis-3" class="sublink"></a><a href="#thesis-4" class="sublink"></a><a href="#thesis-5" class="sublink"></a><a href="#thesis-6" class="sublink"></a><a href="#thesis-7" class="sublink"></a></span></div>
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Connections</span></span><img data-src="thesis_cards" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#thesis" class="sublink"></a><a href="#thesis-1" class="sublink"></a><a href="#thesis-2" class="sublink"></a><a href="#thesis-3" class="sublink"></a><a href="#thesis-4" class="sublink"></a><a href="#thesis-5" class="sublink"></a></span></div>
               <div class="projectlinks"><a href="#bugs" class="projectLink"><span class="projectDesc">
                     <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img data-src="bugs_typographic" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#bugs" class="sublink"></a><a href="#bugs-1" class="sublink"></a><a href="#bugs-2" class="sublink"></a></span></div>
               <div class="projectlinks"><a href="#love" class="projectLink"><span class="projectDesc">
                     <!-- span.projectType #{project.desc}--><span class="projectTitle">Love</span></span><img data-src="love1" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#love" class="sublink"></a><a href="#love-1" class="sublink"></a><a href="#love-2" class="sublink"></a></span></div>
               <div class="projectlinks"><a href="#jonah" class="projectLink"><span class="projectDesc">
-                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah_storm2" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#jonah" class="sublink"></a><a href="#jonah-1" class="sublink"></a><a href="#jonah-2" class="sublink"></a><a href="#jonah-3" class="sublink"></a><a href="#jonah-4" class="sublink"></a><a href="#jonah-5" class="sublink"></a></span></div>
+                    <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img data-src="jonah_beach3" data-ext=".jpg" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#jonah" class="sublink"></a><a href="#jonah-1" class="sublink"></a><a href="#jonah-2" class="sublink"></a><a href="#jonah-3" class="sublink"></a></span></div>
               <div class="projectlinks"><a href="#experimental" class="projectLink"><span class="projectDesc">
                     <!-- span.projectType #{project.desc}--><span class="projectTitle">Experimental</span></span><img data-src="hardwork" data-ext=".png" alt="" class="lazy front"/></a><span class="slidelinks"><a href="#experimental" class="sublink"></a><a href="#experimental-1" class="sublink"></a><a href="#experimental-2" class="sublink"></a><a href="#experimental-3" class="sublink"></a><a href="#experimental-4" class="sublink"></a></span></div>
             </div>
@@ -376,8 +376,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="ls-scores" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/ls-scores.png"/></noscript>
+            <div class="image sizable"><img alt="" data-src="ls-scores" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/ls-scores.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -555,69 +555,6 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="thesis_bible" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_bible.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-                <h3>The Making of the Bruce Rogers World Bible</h3>
-                <ul>
-                  <li>World Publishing Co., 1949</li>
-                </ul>
-                <h3>The Bruce Rogers World Bible</h3>
-                <ul>
-                  <li>World Publishing Co., 1949</li>
-                  <li>Designed by Bruce Rogers</li>
-                  <li>Printed by A. Colish</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="thesis-5" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="thesis_bible1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/thesis_bible1.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-                <h3>Prospectus</h3>
-                <ul>
-                  <li>The Bruce Rogers World Bible</li>
-                  <li>World Publishing Co., 1949</li>
-                </ul>
-                <h3>Facsimiles</h3>
-                <ul>
-                  <li>Typographic sample</li>
-                  <li>Galley Sheet</li>
-                  <li>Letter from  Rogers to Colish</li>
-                  <li>Composite of translator page</li>
-                  <li>(From the Press of A. Colish Archives, University of Delaware)</li>
-                </ul>
-                <h3>Other items</h3>
-                <ul>
-                  <li>Metal chase with type</li>
-                  <li>Composing stick with type</li>
-                  <li>Monotype matrix case</li>
-                  <li>Picture of Monotype machine</li>
-                  <li>Printers’ ornaments</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="thesis-6" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_society" data-ext=".jpg" class="lazy responsive"/>
               <noscript><img alt="" src="img/400w/thesis_society.jpg"/></noscript>
             </div>
@@ -642,7 +579,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-7" class="slide">
+        <div id="thesis-5" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -673,7 +610,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-8" class="slide last">
+        <div id="thesis-6" class="slide last">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -846,54 +783,6 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="jonah_cover2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_cover2.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-                <h3>Process</h3>
-                <ul>
-                  <li>Silk-screened slipcase wrapper</li>
-                  <li>Silk-screened endpapers</li>
-                  <li>Cloth-bound book case</li>
-                  <li>Foil stamped spine</li>
-                </ul>
-                <h3>Media</h3>
-                <ul>
-                  <li>Fortune Roman type</li>
-                </ul>
-                <h3>Specs</h3>
-                <ul>
-                  <li>4 ¾" × 6 ¾" × ¾"</li>
-                  <li>2005</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="jonah-2" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="jonah_case2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_case2.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="jonah-3" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_pray" data-ext=".jpg" class="lazy responsive"/>
               <noscript><img alt="" src="img/400w/jonah_pray.jpg"/></noscript>
             </div>
@@ -905,23 +794,7 @@
             </div>
           </div>
         </div>
-        <div id="jonah-4" class="slide">
-          <div class="wrapper buttonwrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper imagewrapper">
-            <div class="image sizable"><img alt="" data-src="jonah_storm2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="img/400w/jonah_storm2.jpg"/></noscript>
-            </div>
-          </div>
-          <div class="wrapper textwrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="jonah-5" class="slide">
+        <div id="jonah-2" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -937,7 +810,7 @@
             </div>
           </div>
         </div>
-        <div id="jonah-6" class="slide last">
+        <div id="jonah-3" class="slide">
           <div class="wrapper buttonwrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -966,6 +839,22 @@
                   <li>24 pages</li>
                   <li>2005</li>
                 </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="jonah-4" class="slide last">
+          <div class="wrapper buttonwrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper imagewrapper">
+            <div class="image sizable"><img alt="" data-src="jonah_case2" data-ext=".jpg" class="lazy responsive"/>
+              <noscript><img alt="" src="img/400w/jonah_case2.jpg"/></noscript>
+            </div>
+          </div>
+          <div class="wrapper textwrapper">
+            <div class="info sizable">
+              <div class="infoinner">
               </div>
             </div>
           </div>
